--- a/src/gcintranet/appFooter.ejs
+++ b/src/gcintranet/appFooter.ejs
@@ -84,7 +84,7 @@
     <%_ } else if (pr.subTheme == 'esdc' || pr.subTheme == 'labour') { -%>
         <nav role="navigation" class="container visible-xs visible-sm visible-md visible-lg wb-navcurr" data-wb-ajax='{"url": "<%- (pr.footerPath != null)? pr.footerPath: wet.builder.environmentHost(pr.cdnEnv) + 'app/cls/WET/global/<^- msg('esdcfooter-eng.html') ^>'%>", "type": "replace", "nocache": true}'></nav>
     <%_ } -%>
-    <div class="brand">
+    <div class="brand gc-sub-footer">
         <div class="container">
             <div class="row">
                 <div class="col-xs-8 col-md-8">
