--- a/src/gcweb/serverBottom.ejs
+++ b/src/gcweb/serverBottom.ejs
@@ -2,7 +2,7 @@
  * This is all of the references to be made before existing page content.
 -%>
 <footer id="wb-info">
-    <div class="brand">
+    <div class="gc-sub-footer">
         <div class="container">
             <div class="row">
                 <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Top of page / <span lang="fr">Haut de la page</span> <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
