--- a/src/gcintranet/footer.ejs
+++ b/src/gcintranet/footer.ejs
@@ -28,7 +28,7 @@
             </ul>
         </nav>
     <%_ } -%>
-    <div class="brand gc-sub-footer">
+    <div class="brand">
         <div class="container">
             <div class="row">
                 <div class="col-xs-8 col-md-8">
