Add missing skip section link for small screens

--- a/src/gcintranet/appTop.ejs
+++ b/src/gcintranet/appTop.ejs
@@ -51,7 +51,7 @@ if (pr.subTheme === 'eccc') {
         <li class="wb-slc"><a class="wb-sl" href="#wb-cont"><^- msg('Skip to main content') ^></a></li>
         <li class="wb-slc visible-sm visible-md visible-lg"><a class="wb-sl" href="#wb-info"><^- msg('Skip to "About this site"') ^></a></li>
         <%_ if (pr.topSecMenu == true) { -%>
-            <li class="wb-slc visible-md visible-lg"><a class="wb-sl" href="#wb-sec"><^- msg('Skip to section menu') ^></a></li>
+            <li class="wb-slc visible-xs visible-md visible-lg"><a class="wb-sl" href="#wb-sec"><^- msg('Skip to section menu') ^></a></li>
         <%_ } -%>
     </ul>
 </nav>
