--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -20,7 +20,7 @@
         <li class="wb-slc"><a class="wb-sl" href="#wb-cont"><^- msg('Skip to main content') ^></a></li>
         <li class="wb-slc visible-xs visible-sm visible-md visible-lg"><a class="wb-sl" href="#wb-info"><^- msg('Skip to ') ^><% if (pr.topCusMenu == true) { %><^- msg('"Related links"') ^><% } else { %><^- msg('"About this Web application"') ^><% } %></a></li>
         <%_ if (pr.topSecMenu == true) { -%>
-            <li class="wb-slc visible-md visible-lg"><a class="wb-sl" href="#wb-sec"><^- msg('Skip to section menu') ^></a></li>
+            <li class="wb-slc visible-xs visible-md visible-lg"><a class="wb-sl" href="#wb-sec"><^- msg('Skip to section menu') ^></a></li>
         <%_ } -%>
     </ul>
 </nav>
